--- a/file.html
+++ b/file.html
@@ -21,7 +21,7 @@
 	<div class="input">
 		<p>Click on the "Choose File" button to upload a file:</p>
 
-		<form action="./index.html">
+		<form action="index.html">
 		  <input type="file" id="myFile" name="filename">
 		  <input type="submit" value="upload">
 		</form>	
